# rSON

./: .appveyor.yml  .codecov.yml  .gitignore  .lgtm.yml  .travis.yml  JSONArray.cpp  JSONAtom.cpp  JSONBool.cpp  JSONErrors.cpp  JSONFloat.cpp  JSONInt.cpp  JSONNull.cpp  JSONObject.cpp  JSONString.cpp  Makefile  Makefile.inc  Makefile.mac  Memory.cpp  Memory.h  Parser.cpp  Parser.h  README.md  Stream.cpp  String.cpp  String.h  String.hxx  Writer.cpp  build32.sh  build64.sh  build64Debian.sh  buildmac.sh  internal.h  meson.build  meson_options.txt  rSON.h  rSON.pc.in  rSON_socket.cpp  rSON_socket.h  rSON_socket.pc.in  rpc.cpp  (+1 more)
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  coverity.yml
.travis-ci/: beforeScript.sh  install.sh
VS/: .gitignore  rSON.sln  rSON.vcxproj  rSON.vcxproj.filters
include/: meson.build  rSON.hxx
include/internal/: parser.hxx  string.hxx  types.hxx
include/socket/: meson.build  rSONSocket.hxx
src/: jsonArray.cxx  jsonAtom.cxx  jsonBool.cxx  jsonErrors.cxx  jsonFloat.cxx  jsonInt.cxx  jsonNull.cxx  jsonObject.cxx  jsonString.cxx  meson.build  parser.cxx  stream.cxx  string.cxx  writer.cxx
src/socket/: meson.build  socket.cxx
test/: Makefile  buildRPC.sh  buildSocket.sh  meson.build  rSON.cpp  stream.cpp  test.h  testHeader.cpp  testHeader.h  testJSONArray.cpp  testJSONBool.cpp  testJSONErrors.cpp  testJSONFloat.cpp  testJSONInt.cpp  testJSONNull.cpp  testJSONObject.cpp  testJSONString.cpp  testParser.cpp  testRPC.cpp  testSocket.cpp  testStream.cpp  testStream.h  testWriter.cpp
